syntax = "proto3";
import "validate/validate.proto";

package proto;

option go_package = "./;proto";

service SoundService {
    rpc GetSound(ClientInfoMessage) returns (stream ChatServerMessage);
    rpc SendSound(ChatClientMessage) returns (ClientResponseMessage);
    rpc InitClient(ClientInfoMessage) returns (ClientInitResponseMessage);
}

// GetSound(ChatClientMessage) should be GetSound(EmptyMessage)
// SendSound(ChatClientMessage) should return (Int);

message ChatServerMessage {
    repeated float data = 3; // fixed32?
    int64 rate = 2;
    uint64 soundId = 4;

    reserved 1; // bytes data
}

message ChatClientMessage {
    repeated float data = 4;
    int64 rate = 2;
    bool ready_to_send = 3;
    uint64 soundId = 5;
    uint32 userId = 6;
    uint64 confId = 7;

    reserved 1; // bytes data
}

message ClientResponseMessage {
    int64 rate = 1;
    uint64 soundId = 2;
}

message ClientInfoMessage {
    uint64 confId = 1;
}


message ClientInitResponseMessage {
    uint32 clientId = 1;
    uint64 confId = 2;
}

// not to use basic google.Empty now, may be later change 
message EmptyMessage {
}
